@@ -1,3 +1,14 @@
+2007-05-18  Julien MOUTTE  <julien@moutte.net>
+
+	* flumotion/component/encoders/wmv/admin_gtk.py:
+	* flumotion/component/encoders/wmv/wmv.glade:
+	* flumotion/component/encoders/wmv/wmv.py:
+	* flumotion/component/encoders/wmv/wmv.xml: Make the WMV
+	encoder autodiscover available GStreamer plug-ins and report
+	errors to the admin UI. Implement a GTK UI for knowing which
+	encoder is in use and additional informations about it's
+	configuration.
+
 2007-05-09  Thomas Vander Stichele  <thomas at apestaart dot org>
 
 	* flumotion/component/producers/wms/asfparse.py:
